--- a/index.html
+++ b/index.html
@@ -151,7 +151,72 @@
         <p>Consultas SQL</p>
         <button onclick="descargarPDF('SEMANA3.pdf')">Descargar PDF</button>
       </div>
-
+      <div class="card">
+        <iframe src="img/semana4.png" title="Semana 4"></iframe>
+        <h2>Semana 4</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana4.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana5.png" title="Semana 5"></iframe>
+        <h2>Semana 5</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana5.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana6.png" title="Semana 6"></iframe>
+        <h2>Semana 6</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana6.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana7.png" title="Semana 7"></iframe>
+        <h2>Semana 7</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana7.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana8.png" title="Semana 8"></iframe>
+        <h2>Semana 8</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana8.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana9.png" title="Semana 9"></iframe>
+        <h2>Semana 9</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana9.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana10.png" title="Semana 10"></iframe>
+        <h2>Semana 10</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana10.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana11.png" title="Semana 11"></iframe>
+        <h2>Semana 11</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana11.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana12.png" title="Semana 12"></iframe>
+        <h2>Semana 12</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana12.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana13.png" title="Semana 13"></iframe>
+        <h2>Semana 13</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana13.png')">Descargar PDF</button>
+      </div>
+      <div class="card">
+        <iframe src="img/semana14.png" title="Semana 14"></iframe>
+        <h2>Semana 14</h2>
+        <p>Consultas SQL</p>
+        <button onclick="descargarPDF('semana14.png')">Descargar PDF</button>
+      </div>
       <!-- Ejemplo final (Semana 15) -->
       <div class="card">
         <iframe src="img/semana4.png" title="Semana 15"></iframe>
