--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </p>
       <div class="botones">
         <a href="#" class="btn"><i class="fab fa-github"></i> GitHub</a>
-        <a href="#" class="btn">Contactame</a>
+        <a href="https://wa.link/33paui" class="btn">Contactame</a>
       </div>
     </section>
 
