--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <main class="contenedor">
     <section class="presentacion" id="Home">
-      <h2>ANSELMO ALMERCO</h2>
+      <h1 class="titulo">ANSELMO ALMERCO</h1>
       <p>
         Bienvenido a mi portafolio personal. Aquí encontrarás información sobre mis proyectos,
         habilidades y cómo contactarme. Desarrollador web con experiencia en React y Next.js.
