--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="contenedor">
     <section class="presentacion" id="Home">
       <h1 class="titulo">ANSELMO ALMERCO</h1>
-      <p>
+      <p class="parrafo">
         Bienvenido a mi portafolio personal. Aquí encontrarás información sobre mis proyectos,
         habilidades y cómo contactarme. Desarrollador web con experiencia en React y Next.js.
         Apasionado por el diseño y la tecnología. Siempre aprendiendo y mejorando.
